--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack",
-        "dev": "webpack-dev-server"
+        "dev": "webpack-dev-server --open"
     },
     "repository": {
         "type": "git",
@@ -20,22 +20,28 @@
     },
     "homepage": "https://github.com/youngrivers/vue-todo#readme",
     "devDependencies": {
-        "css-loader": "^1.0.0",
-        "vue": "^2.5.16",
-        "vue-loader": "^15.2.6",
-        "vue-template-compiler": "^2.5.16",
-        "webpack": "^4.16.1",
-        "webpack-cli": "^3.1.0"
-    },
-    "dependencies": {
+        "babel-core": "^6.22.1",
+        "babel-eslint": "^8.2.1",
+        "babel-helper-vue-jsx-merge-props": "^2.0.3",
+        "babel-loader": "^7.1.1",
+        "babel-plugin-syntax-jsx": "^6.18.0",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-plugin-transform-vue-jsx": "^3.5.0",
+        "babel-preset-env": "^1.3.2",
+        "babel-preset-stage-2": "^6.22.0",
+        "clean-webpack-plugin": "^1.0.0",
         "css-loader": "^1.0.0",
         "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.2.0",
         "style-loader": "^0.21.0",
-        "url-loader": "^1.0.1",
         "vue": "^2.5.16",
         "vue-loader": "^15.2.6",
         "vue-template-compiler": "^2.5.16",
-        "webpack": "^4.16.1",
-        "webpack-dev-server": "^3.1.5"
+        "webpack": "^4.25.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10"
+    },
+    "dependencies": {
+        "url-loader": "^1.0.1"
     }
 }
