--- a/package.json
+++ b/package.json
@@ -20,20 +20,22 @@
     },
     "homepage": "https://github.com/youngrivers/vue-todo#readme",
     "devDependencies": {
-        "babel-core": "^6.22.1",
-        "babel-eslint": "^8.2.1",
+        "autoprefixer": "^9.3.1",
+        "babel-core": "^6.26.0",
         "babel-helper-vue-jsx-merge-props": "^2.0.3",
-        "babel-loader": "^7.1.1",
+        "babel-loader": "^7.1.3",
         "babel-plugin-syntax-jsx": "^6.18.0",
-        "babel-plugin-transform-runtime": "^6.22.0",
         "babel-plugin-transform-vue-jsx": "^3.5.0",
-        "babel-preset-env": "^1.3.2",
-        "babel-preset-stage-2": "^6.22.0",
+        "babel-preset-env": "^1.6.1",
         "clean-webpack-plugin": "^1.0.0",
         "css-loader": "^1.0.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "postcss-loader": "^3.0.0",
         "style-loader": "^0.21.0",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "url-loader": "^0.6.2",
         "vue": "^2.5.16",
         "vue-loader": "^15.2.6",
         "vue-template-compiler": "^2.5.16",
